# nnClassification

./: .gitignore  .readthedocs.yml  CLAUDE.md  CONFIG.md  DOCS_UPDATE_SUMMARY.md  FEDERATED_LEARNING_INTEGRATION.md  INTEGRATION_REVIEW.md  README.md  SEGMENTATION_INTEGRATION.md  inference.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  splitting.py  train.py  visualise.py
docs/: README.md  SEGMENTATION_GUIDE.md  workflow.md
docs/architecture/: README.md  data-flow.md  design-decisions.md  entry-points.md  ml-src-modules.md  overview.md
docs/configuration/: README.md  cli-overrides.md  data.md  examples.md  inference.md  models.md  optimizer-scheduler.md  overview.md  reproducibility.md  training.md  transforms.md
docs/development/: README.md  adding-metrics.md  adding-models.md  adding-optimizers.md  adding-transforms.md  extending-framework.md
docs/getting-started/: README.md  data-preparation.md  installation.md  quick-start.md
docs/reference/: README.md  best-practices.md  faq.md  performance-tuning.md  troubleshooting.md  visualization.md
docs/user-guides/: README.md  advanced-training.md  ensemble-inference.md  federated-learning.md  hyperparameter-tuning.md  inference.md  lr-finder.md  model-export.md  monitoring.md  resuming-training.md  test-time-augmentation.md  training.md
ml_src/: __init__.py  checkpointing.py  config.yaml  config_template.yaml  dataset.py  federated_config_template.yaml  loader.py  loss.py  metrics.py  network.py  optimizer.py  seeding.py  test.py  trainer.py
ml_src/cli/: __init__.py  export.py  fl_client.py  fl_run.py  fl_server.py  inference.py  init_config.py  lr_finder.py  search.py  splitting.py  train.py  visualise.py
ml_src/core/: checkpointing.py  dataset.py  early_stopping.py  export.py  loader.py  lr_finder.py  metrics.py  search.py  seeding.py  task.py  test.py  trainer.py
ml_src/core/callbacks/: __init__.py  augmentation.py  base.py  checkpoint.py  early_stopping.py  gradient.py  lr_monitor.py  progress.py  swa.py
ml_src/core/config/: __init__.py  create.py  load.py  override.py
ml_src/core/federated/: __init__.py  client.py  partitioning.py  server.py  strategies.py
ml_src/core/inference/: __init__.py  accelerate.py  base.py  ensemble.py  mixed_precision.py  standard.py  tta.py  tta_ensemble.py
ml_src/core/logging/: __init__.py  (+1 more)
ml_src/network/: __init__.py  base.py  custom.py
tests/: README.md  conftest.py  test_architectures.py  test_checkpointing.py  test_config.py  test_data.py  test_early_stopping.py  test_ema.py  test_ensemble.py  test_export.py  test_federated.py  test_loss_optimizer.py  test_lr_finder.py  test_metrics_restructure.py  test_network_loading.py  test_onnx_validation.py  test_tta.py
tests/callbacks/: __init__.py  conftest.py  test_advanced.py  test_base.py  test_essential.py  test_integration.py
tests/inference/: test_strategies.py
tests/network/: test_architectures.py  test_simple_unet.py
tests/workflow/: README.md  conftest.py  test_cross_validation_workflow.py  test_quick_start_workflow.py  test_search_workflow.py  test_training_workflows.py  test_visualization_workflows.py
(+38 files in other folders)
